--- a/src/content/blog/slug7.mdx
+++ b/src/content/blog/slug7.mdx
@@ -1,7 +1,7 @@
 ---
-title: '不要只关注用户价值'
+title: 'AI 套壳，不在于 AI，在壳。'
 description: ''
-date: '2025-06-18'
+date: '2025-06-29'
 ---
 
 白瓜学术的壁垒在于 AI 输出的质量。这个结论是不对的。这可能是我们自己的臆想。
